--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>[Your Name] – IT Support & Systems Technician</title>
-  <meta name="description" content="Portfolio for an IT Support & Systems Technician — home lab, systems, networking, and projects." />
+  <title>Cristobal Curry – IT Support & Systems Technician</title>
+  <meta name="description" content="Portfolio" />
   <style>
     :root{
       --bg: #333333;
@@ -65,10 +65,10 @@
   <div class="site">
     <header>
       <div>
-        <h1>[Your Name] – IT Support & Systems Technician</h1>
+        <h1>Cristobal Curry – IT Support & Systems Technician</h1>
         <div class="subtitle">CompTIA A+ · Network+ · ITF+ · CIOS • Home lab & systems administration</div>
       </div>
-      <div class="badge">[City, State] · <a href="#contact">Contact</a></div>
+      <div class="badge">Oklahoma, USA] · <a href="#contact">Contact</a></div>
     </header>
 
     <main>
