--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1>Cristobal Curry – IT Support & Systems Technician</h1>
         <div class="subtitle">CompTIA A+ · Network+ · ITF+ · CIOS • Home lab & systems administration</div>
       </div>
-      <div class="badge">Oklahoma, USA] · <a href="#contact">Contact</a></div>
+      <div class="badge">Oklahoma, USA · <a href="#contact">Contact</a></div>
     </header>
 
     <main>
@@ -122,9 +122,9 @@
     <footer>
       <div id="contact">
         <strong>Contact</strong>
-        <div class="small">Email: <a href="mailto:youremail@example.com">youremail@example.com</a> · GitHub: <a href="https://github.com/yourusername" target="_blank" rel="noopener">github.com/yourusername</a> · LinkedIn: <a href="https://linkedin.com/in/yourname" target="_blank" rel="noopener">linkedin.com/in/yourname</a></div>
+        <div class="small"><a href="mailto:cbcurry94@gmail.com">Email</a> · GitHub: <a href="https://github.com/HzCris" target="Github" rel="noopener">github.com/yourusername</a> · LinkedIn: <a href="https://linkedin.com/in/yourname" target="_blank" rel="noopener">linkedin.com/in/yourname</a></div>
       </div>
-      <div class="small">Site · <a href="https://github.com/yourusername/yourusername.github.io" target="_blank" rel="noopener">Source</a></div>
+      <div class="small">Site · <a href="https://hzcris.github.io/" target="_blank" rel="noopener">Source</a></div>
     </footer>
   </div>
 </body>
