--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <footer>
       <div id="contact">
         <strong>Contact</strong>
-        <div class="small"><a href="mailto:cbcurry94@gmail.com">Email</a> · GitHub: <a href="https://github.com/HzCris" target="Github" rel="noopener">github.com/yourusername</a> · LinkedIn: <a href="https://linkedin.com/in/yourname" target="_blank" rel="noopener">linkedin.com/in/yourname</a></div>
+        <div class="small"><a href="mailto:cbcurry94@gmail.com">Email</a> · <a href="https://github.com/HzCris" target="_blank" rel="noopener">GitHub</a> ·</div>
       </div>
       <div class="small">Site · <a href="https://hzcris.github.io/" target="_blank" rel="noopener">Source</a></div>
     </footer>
